--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- navbar section -->
     <header>
-        <div class="container header-container">
+        <div class="container header-container ">
             <nav class="navbar navbar-expand-lg ">
                 <div class="container-fluid">
                     <div class="logo">
@@ -28,5 +28,65 @@
               </nav>
         </div>
     </header>
+    <!-- carousel section -->
+    <section class="banner-section">
+        <div class="container">
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+               <div class="carousel-item active">
+                <div class="row align-items-center">
+                  <div class="col-md-7 banner-detail">
+                    <h1>Mackbook Pro</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores eius mollitia culpa, sed nostrum qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, aperiam!</p>
+                    <button class="btn">Buy Now>></button>
+                  </div>
+                  <div class="col-md-5">
+                    <img src="img/banner-products/product-1.png" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+              </div>
+    <div class="carousel-item">
+      <div class="row align-items-center">
+        <div class="col-md-7 banner-detail">
+          <h1>Google Alexa</h1>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius necessit voluptate sint veniam. Nulla, omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, doloremque?</p>
+          <button class="btn">Buy Now>></button>
+        </div>
+        <div class="col-md-5">
+          <img src="img/banner-products/slider-1.png" class="d-block w-100" alt="...">
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="row align-items-center">
+        <div class="col-md-7 banner-detail">
+          <h1>JBL Sound</h1>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius necessi voluptate sint veniam. Nulla, omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, iusto?</p>
+          <button class="btn">Buy Now>></button>
+        </div>
+        <div class="col-md-5">
+          <img src="img/banner-products/slider-3.png" class="d-block w-100" alt="...">
+        </div>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+        </div>
+    </section>
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
 </body>
 </html>
