--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
                     </div>
                     <div class="navbar-nav">
                       <a class="nav-link " href="#">Home</a>
-                      <a class="nav-link" href="#">Products</a>
-                      <a class="nav-link" href="#">About Us</a>
+                      <a class="nav-link" href="#">Smartphone</a>
+                      <a class="nav-link" href="#">Laptop</a>
+                      <a class="nav-link" href="#">Catagories</a>
                       <button class="btn">Contact Us</button>
                     </div>
                 </div>
@@ -81,8 +82,53 @@
 </div>
         </div>
     </section>
+<!-- phone section -->
+<section class="phone-section">
+  <div class="container">
+    <div class="d-flex align-items-center title">
+      <div><h4>Smartphone</h4></div>
+      <div><h5>see all</h5></div>
+    </div>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card align-items-center text-center">
+          <img src="img/phone/phone-2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">iPhone 11pro</h5>
+            <p class="card-text">Ai phone borolx ar jonno! but maje maje Goribs o use kore.</p>
+            <p class="price">$999</p>
+            <button class="btn">Contact Us</button>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card align-items-center text-center">
+          <img src="img/phone/phone-3.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Samsung Galaxy Note 10+</h5>
+            <p class="card-text">Aidaa o borolx ar jonno! but maje maje Goribs o use kore.</p>
+            <p class="price">$799</p>
+            <button class="btn">Contact Us</button>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card text-center align-items-center">
+          <img src="img/phone/phone-1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Poco X3</h5>
+            <p class="card-text">Aidaa o borolx ar jonno! but maje maje Goribs o use kore.</p>
+            <p class="price">$699</p>
+            <button class="btn">Contact Us</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
+
+  </div>
+</section>
 
 
 
