--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style/bootstrap.min.css">
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style/style.css">
+    <script src="https://kit.fontawesome.com/30afdfc6d9.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- navbar section -->
@@ -20,9 +21,9 @@
                     </div>
                     <div class="navbar-nav">
                       <a class="nav-link " href="#">Home</a>
-                      <a class="nav-link" href="#">Smartphone</a>
-                      <a class="nav-link" href="#">Laptop</a>
-                      <a class="nav-link" href="#">Catagories</a>
+                      <a class="nav-link" href="#smartphone">Smartphone</a>
+                      <a class="nav-link" href="#laptop">Laptop</a>
+                      <a class="nav-link" href="#catagories">Catagories</a>
                       <button class="btn">Contact Us</button>
                     </div>
                 </div>
@@ -31,7 +32,7 @@
     </header>
     <!-- carousel section -->
     <section class="banner-section">
-        <div class="container">
+        <div class="container style">
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                <div class="carousel-item active">
@@ -85,7 +86,7 @@
 <!-- phone section -->
 <section class="phone-section">
   <div class="container">
-    <div class="d-flex align-items-center title">
+    <div class="d-flex align-items-center title" id="smartphone">
       <div><h4>Smartphone</h4></div>
       <div><h5>see all</h5></div>
     </div>
@@ -97,7 +98,7 @@
             <h5 class="card-title">iPhone 11pro</h5>
             <p class="card-text">Ai phone borolx ar jonno! but maje maje Goribs o use kore.</p>
             <p class="price">$999</p>
-            <button class="btn">Contact Us</button>
+            <button class="btn">Buy Now>></button>
           </div>
         </div>
       </div>
@@ -108,7 +109,7 @@
             <h5 class="card-title">Samsung Galaxy Note 10+</h5>
             <p class="card-text">Aidaa o borolx ar jonno! but maje maje Goribs o use kore.</p>
             <p class="price">$799</p>
-            <button class="btn">Contact Us</button>
+            <button class="btn">Buy Now>></button>
           </div>
         </div>
       </div>
@@ -119,18 +120,123 @@
             <h5 class="card-title">Poco X3</h5>
             <p class="card-text">Aidaa o borolx ar jonno! but maje maje Goribs o use kore.</p>
             <p class="price">$699</p>
-            <button class="btn">Contact Us</button>
+            <button class="btn">Buy Now>></button>
           </div>
         </div>
       </div>
     </div>
-
-
-
   </div>
 </section>
-
-
+<!-- Laptop section -->
+<section class="laptop-section">
+  <div class="container">
+    <div class="d-flex align-items-center title" id="laptop">
+      <div><h4>Laptop</h4></div>
+      <div><h5>see all</h5></div>
+    </div>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card align-items-center text-center">
+          <img src="img/laptop/product-1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Asus VivoBook</h5>
+            <p class="card-text">Ai laptop borolx ar jonno! but maje maje Goribs o use kore.</p>
+            <p class="price">$1290</p>
+            <button class="btn">Buy Now>></button>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card align-items-center text-center">
+          <img src="img/laptop/product-2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Razer Blade 15</h5>
+            <p class="card-text">Aidaa o borolx ar jonno! but maje maje Goribs o use kore.</p>
+            <p class="price">$1799</p>
+            <button class="btn">Buy Now>></button>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card text-center align-items-center">
+          <img src="img/laptop/product-3.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Xaomi Mi NoteBook pro</h5>
+            <p class="card-text">Aidaa o borolx ar jonno! but maje maje Goribs o use kore.</p>
+            <p class="price">$2699</p>
+            <button class="btn">Buy Now>></button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Catagories Section -->
+<section>
+  <div class="container">
+    <div class="catagories " id="catagories">
+      <h4>Catagories</h4>
+      <div class="underline"></div>
+    </div>
+    <div class="row row-cols-1 row-cols-md-3 g-4 align-items-center bejal">
+  <div class="col-md-3 box1 ">
+    <div><img src="img/Categories/bag.png" alt=""></div>
+    <div> <p>Bag</p></div>
+  </div>
+  <div class="col-md-3">
+    <div class="row box2">
+      <div><img src="img/Categories/perfume.png" alt=""></div>
+      <div><p>Perfume</p></div>
+    </div>
+    <div class="row box2">
+      <div><img src="img/Categories/shoe.png" alt=""></div>
+      <div><p>Shoes</p></div>
+    </div>
+  </div>
+  <div class="col-md-5">
+    <img src="img/Categories/pale-order.png" alt="">
+  </div>
+</div>
+</section>
+<!-- contact section -->
+<section>
+  <div class="container">
+    <div class="contact d-flex">
+    <div class="half-width">
+      <h2>Contact Us</h2>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores nam officia, a velit commodi rerum neque enim illo ea ad sit dolore </p>
+      <div class="icon">
+        <h6>Social Links</h6>
+        <img src="img/icon/facebook.png" alt="">
+        <img src="img/icon/insta.png" alt="">
+        <img src="img/icon/twitter.png" alt="">
+      </div>
+      <div class="about">
+        <h6>About Us</h6>
+        <ul>
+          <li>Lorem ipsum dolor sit amet, consectetur.</li>
+          <li>Lorem ipsum dolor sit amet, consectetur.</li>
+          <li>Lorem ipsum dolor sit amet, consectetur.</li>
+          <li>Lorem ipsum dolor sit amet, consectetur.</li>
+          <li>Lorem ipsum dolor sit amet, consectetur.</li>
+        </ul>
+      </div>
+    </div>
+    <div class="half-width">
+      <h2>Let's Message Us</h2>
+      <input placeholder="Your Name" type="text" name="name" id="#">
+      <input type="email" name="email" placeholder="Enter Your Email">
+      <textarea placeholder="Enter Your Message" name="" id="" cols="30" rows="10"></textarea>
+      <div class="btn2">
+        <button class="btn">Contact Us</button>
+      </div>
+    </div>
+  </div>
+  <div class="copy">
+  <p><i class="fa-solid fa-copyright"></i>Copright! All rights reserves Sojib-Kawsar-Nirob</p>
+</div>
+  </div>
+</section>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
